# renault-ai-vision-gui-system

./: FINAL.py  MAKE ROI.py  NUROCLE.py  SENDING FILE.py  SQL.py  app.py  sql2.py  구역박스.py  그룹짓기.PY  마지막 분류.py  모달 연습장.py  박스에 이미지 넣기 표시연습.py  빨간박스.py  알람 함수.py  연습.json  연습중.PY  완성본 연습.py  완성본.PY  이름바꿔 옮기기.py  이미지 자르기.py  자동차2_7.json  카메라코드.py  폴더 작업 가능.py  폴더생성.py
Real_Renault/: roi_coordinates.json
Real_Renault/roi제이슨/HZG/: crop_coordinates_240419134952.json  (+10 more)
Real_Renault/디텍션 갯수/: detection_number_HZG_1R1.json  detection_number_HZG_1R2.json  detection_number_HZG_1R3.json  detection_number_HZG_1R4.json  detection_number_LJLHEV_1R1.json  detection_number_LJLHEV_1R2.json  detection_number_LJLHEV_3R1.json  detection_number_LJLICE_1R1.json  detection_number_LJLICE_1R2.json
Real_Renault/연습용 카메라/: BaslerCamera.h  BaslerCameraArray.h  BaslerCameraCameraEventHandler.h  BaslerCameraCameraParams.cpp  BaslerCameraCameraParams.h  BaslerCameraChunkDataParams.cpp  BaslerCameraChunkDataParams.h  BaslerCameraConfigurationEventHandler.h  BaslerCameraEventParams.cpp  BaslerCameraEventParams.h  BaslerCameraGrabResultData.h  BaslerCameraGrabResultPtr.h  BaslerCameraImageEventHandler.h  BaslerCameraSample.cpp  BaslerCameraStreamParams.cpp  BaslerCameraStreamParams.h  BaslerCameraTLParams.cpp  BaslerCameraTLParams.h  CMakeLists.txt
car1j/: 자동차 1.json
car2j/: 자동차 2-4.json  자동차2.json  자동차2_1.json  자동차2_2.json  자동차2_3.json  자동차2_7.json
car3j/: 자동차 3.json
car4j/: 자동차 4.json
car5j/: 자동차 5.json
car6j/: 자동차 6.json
사진제이슨변환/: 자동차 라이트.jpg.json  자동차 후면.jpg.json
(+40 files in other folders)
